# my_lang_app

./: .gitignore  README.md  dune-project  package.json
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
lib/: cast.ml  dune  eval.ml  lexer.mll  parser.mly  print.ml  syntax.ml  tcheck.ml
web/: index.html  package-lock.json
web/public/: main.bc.js
web/src/: App.css  App.tsx  Editor.tsx  Outputs.tsx  Toolbar.tsx  index.css  vite-env.d.ts
web/src/types/: mylang_lib.d.ts
